--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@huggingface/inference": "^4.8.0",
     "dotenv": "^17.2.2",
+    "mongoose": "^8.18.2",
     "openai": "^5.20.2"
   }
 }
