--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "@huggingface/inference": "^4.8.0",
+    "better-auth": "^1.3.27",
     "dotenv": "^17.2.2",
     "mongoose": "^8.18.2",
     "openai": "^5.20.2"
